--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
      </table>
      <hr size="5" noshade>
     <a href="contact.html">Contact</a>
+      <hr size="5" noshade>
     <h3><strong>Hobbies</strong></h3>
     <ul>
         <li><a href="https://www.rockstargames.com/">Gaming</a></li>
